--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
           <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
             <h3><span class="embiggen">Welcome</span></h3>
             <picture>
-              <source srcset="resources/images/wurmple-shiny.png" media="(prefers-color-scheme: dark)">
+              <source srcset="resources/images/wurmple.webp" type="image/webp">
+              <source srcset="resources/images/wurmple-shiny.webp" type="image/webp" media="(prefers-color-scheme: dark)">
+              <source srcset="resources/images/wurmple-shiny.png" type="image/png" media="(prefers-color-scheme: dark)">
               <img src="resources/images/wurmple.png" alt="Image supplied not illustrative, the author is not a Pokémon.">
             </picture>
             <p align="center">
@@ -151,8 +153,8 @@
         </ul>
       </div>
     </footer>
-    <script type="text/javascript" src="/resources/javascript/material.min.js"></script>
-    <script type="text/javascript" src="/resources/javascript/random_phrase.min.js"></script>
-    <script type="text/javascript" src="/resources/javascript/sainternet.min.js"></script>
+    <script type="text/javascript" src="/resources/javascript/material.min.js" async></script>
+    <script type="text/javascript" src="/resources/javascript/random_phrase.min.js" async></script>
+    <script type="text/javascript" src="/resources/javascript/sainternet.min.js" async></script>
   </body>
 </html>
