--- a/pokedexoverdns.html
+++ b/pokedexoverdns.html
@@ -87,6 +87,7 @@
               Sainternet is proud to present to you the <b><i>world's first</i></b> (…and only?) DNS driven <a href="https://en.wikipedia.org/wiki/TXT_record">TXT record</a> based National Pokédex over DNS!
             </p>
             <picture>
+              <source srcset="resources/images/terminal.webp" type="image/webp">
               <a href="/265.html#pokemon265" style="cursor:default"><img src="resources/images/terminal.png" alt="Example Pokédex-over-DNS query using nslookup and dig utilities from the command line: nslookup -type=txt wurmple.pokedex dns.sainternet.xyz, dig +short txt wurmple.pokedex @dns.sainternet.xyz"></a>
             </picture>
             <p>
@@ -172,7 +173,7 @@ nslookup -type=txt 265.pokedex dns.sainternet.xyz
       </div>
     </footer>
     <a href="https://sainternet.xyz" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--16dp"><icon class="material-icons">home</icon></a>
-    <script type="text/javascript" src="/resources/javascript/material.min.js"></script>
-    <script type="text/javascript" src="/resources/javascript/sainternet.min.js"></script>
+    <script type="text/javascript" src="/resources/javascript/material.min.js" async></script>
+    <script type="text/javascript" src="/resources/javascript/sainternet.min.js" async></script>
   </body>
 </html>
