saint-lascivious.github.io: nuts to png
Changes to be committed:
 - modified:   265.html
 - modified:   404.html
 - modified:   index.html
 - modified:   pokedexoverdns.html

--- a/index.html
+++ b/index.html
@@ -90,10 +90,8 @@
           <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
             <h3><span class="embiggen">Welcome</span></h3>
             <picture>
-              <source srcset="resources/images/wurmple.webp" type="image/webp">
               <source srcset="resources/images/wurmple-shiny.webp" type="image/webp" media="(prefers-color-scheme: dark)">
-              <source srcset="resources/images/wurmple-shiny.png" type="image/png" media="(prefers-color-scheme: dark)">
-              <img src="resources/images/wurmple.png" alt="Image supplied not illustrative, the author is not a Pokémon.">
+              <img src="resources/images/wurmple.webp" alt="Image supplied not illustrative, the author is not a Pokémon.">
             </picture>
             <p align="center">
               Welcome to Sainternet.
