--- a/404.html
+++ b/404.html
@@ -86,10 +86,8 @@
           <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
             <h3><span class="embiggen">Pokémon #404<br>Luxio<br>(Spark Pokémon)</span></h3>
             <picture>
-              <source srcset="resources/images/luxio.webp" type="image/webp">
               <source srcset="resources/images/luxio-shiny.webp" type="image/webp" media="(prefers-color-scheme: dark)">
-              <source srcset="resources/images/luxio-shiny.png" type="image/png" media="(prefers-color-scheme: dark)">
-              <img src="resources/images/luxio.png" alt="Pokémon #404, Luxio (Spark Pokémon): Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.">
+              <img src="resources/images/luxio.webp" alt="Pokémon #404, Luxio (Spark Pokémon): Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.">
             </picture>
             <p align="center">
               A wild <b>Luxio</b> appeared!
