saint-lascivious.github.io: fix some prefetch/load stuff
Changes to be committed:
 - modified:   265.html
 - modified:   index.html

--- a/265.html
+++ b/265.html
@@ -37,6 +37,9 @@
     <link rel="stylesheet" href="/resources/stylesheets/pre.min.css">
     <link rel="stylesheet" href="/resources/stylesheets/ribbons.min.css">
     <link rel="stylesheet" href="/resources/stylesheets/sainternet.min.css">
+
+    <link rel="prefetch" href="/404.html" as="document">
+    <link rel="prerender" href="/404.html">
   </head>
   <body>
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
