--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
     <link rel="dns-prefetch" href="discord.gg">
     <link rel="dns-prefetch" href="github.com">
     <link rel="dns-prefetch" href="www.reddit.com">
-    <link rel="prefetch" href="/resources/images/wurmple-shiny.png" as="image">
+    <link rel="prefetch" href="/resources/images/wurmple-shiny.webp" as="image">
     <link rel="prefetch" href="/newsandupdates.html" as="document">
     <link rel="prerender" href="/newsandupdates.html">
     <link rel="prefetch" href="/filtereddns.html" as="document">
     <link rel="prerender" href="/filtereddns.html">
-    <link rel="prefetch" href="/resources/images/terminal.png" as="image">
+    <link rel="prefetch" href="/resources/images/terminal.webp" as="image">
     <link rel="prefetch" href="/pokedexoverdns.html" as="document">
     <link rel="prerender" href="/pokedexoverdns.html">
     <link rel="prefetch" href="/projects.html" as="document">
