saint-lascivious.github.io: self host fontawesome
 - self host fontawesome 6.2.1 free
   we only use brands, remove unrequired excess
 - remove deprecated quic ports from portsandprotocols table
 - clean up portsandprotocols table, remove notes
 - embiggen the five Ws sub questions in frequentlyaskedquestions

Changes to be committed:
 - modified:   frequentlyaskedquestions.html
 - modified:   index.html
 - modified:   portsandprotocols.html
 - new file:   resources/fontawesome/LICENSE.txt
 - new file:   resources/fontawesome/css/brands.css
 - new file:   resources/fontawesome/css/brands.min.css
 - new file:   resources/fontawesome/css/fontawesome.css
 - new file:   resources/fontawesome/css/fontawesome.min.css
 - new file:   resources/fontawesome/webfonts/fa-brands-400.woff2

--- a/frequentlyaskedquestions.html
+++ b/frequentlyaskedquestions.html
@@ -90,14 +90,14 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
             <h3><span class="embiggen">Who, What,<br>When, Where and Why?</span></h3>
-            <p align="center">
+            <p align="center" class="embiggen">
               <b>Who?</b>
             </p>
               Sainternet is chiefly managed by myself, saint (aka. Hayden Pearce), but would not be possible without contributions from my Chief Analyst/Technician (CAT) Tiggy, and the invaluable oversight of my Knowledge/Information Technologist in charge of Testing Immersive Experiences (KITTIE), Willow.
             <p>
             </p>
             <hr>
-            <p align="center">
+            <p align="center" class="embiggen">
               <b>What?</b>
             </p>
             <p>
@@ -111,21 +111,21 @@
               <li>Here "zero logging policy" refers to a self enforced policy whereby any/all logging of relevant services (those involved with processing some or all of a Sainternet DNS query and its response) are either disabled entirely, or set to their minimum possible verbosity and redirected to "/dev/null".</li>
             </ol>
             <hr>
-            <p align="center">
+            <p align="center" class="embiggen">
               <b>When?</b>
             </p>
             <p>
               Sainternet research resolvers or their spiritual ancestors have been operating in some capacity or other since 2016.
             </p>
             <hr>
-            <p align="center">
+            <p align="center" class="embiggen">
               <b>Where?</b>
             </p>
             <p>
               Sainternet is based in Christchurch, New Zealand.
             </p>
             <hr>
-            <p align="center">
+            <p align="center" class="embiggen">
               <b>Why?</b>
             </p>
             <p>
