--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" media="print" onload="this.media='all'">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" media="print" onload="this.media='all'">
-    <link rel="stylesheet" href="/resources/fontawesome/css/fontawesome.min.css" media="print" onload="this.media='all'">
-    <link rel="stylesheet" href="/resources/fontawesome/css/brands.min.css" media="print" onload="this.media='all'">
+    <link rel="stylesheet" href="/resources/fontawesome/css/fontawesome.min.css">
+    <link rel="stylesheet" href="/resources/fontawesome/css/brands.min.css">
+    <link rel="stylesheet" href="/resources/fontawesome/css/solid.min.css">
     <link rel="stylesheet" href="/resources/stylesheets/img.min.css">
     <link rel="stylesheet" href="/resources/stylesheets/ribbons.min.css">
     <link rel="stylesheet" href="/resources/stylesheets/material.red-blue.min.css">
