saint-lascivious.github.io: fontawesome .ttf, rearrange css order
 - also, add a missing metric to 2022 overview news blarg

Changes to be committed:
 - modified:   index.html
 - modified:   newsandupdates.html
 - new file:   resources/fontawesome/webfonts/fa-brands-400.ttf
 - new file:   resources/fontawesome/webfonts/fa-solid-900.ttf

--- a/index.html
+++ b/index.html
@@ -25,22 +25,20 @@
     <link rel="canonical" href="https://sainternet.xyz/index.html">
     <meta name="keywords" content="dns, DNS, dns.sainternet.xyz, doh, DoH, dohttps, DoHTTPS, doh/3, DoH/3, dohttp/3, DoHTTP/3, dot, DoT, dotls, DoTLS, doq, DoQ, doquic, DoQUIC, 'filtered dns', 'filtered DNS', 'Hayden Pearce', pokedex, Pokedex, pokédex, Pokédex, saint, saint-lascivious, sainternet.xyz">
 
+    <link rel="stylesheet" href="/resources/stylesheets/material.red-blue.min.css">
+    <link rel="stylesheet" href="/resources/stylesheets/sainternet.min.css">
+    <link rel="stylesheet" href="/resources/stylesheets/ribbons.min.css">
+    <link rel="stylesheet" href="/resources/stylesheets/img.min.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" media="print" onload="this.media='all'">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" media="print" onload="this.media='all'">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <link rel="stylesheet" href="/resources/fontawesome/css/fontawesome.min.css">
     <link rel="stylesheet" href="/resources/fontawesome/css/brands.min.css">
     <link rel="stylesheet" href="/resources/fontawesome/css/solid.min.css">
-    <link rel="stylesheet" href="/resources/stylesheets/img.min.css">
-    <link rel="stylesheet" href="/resources/stylesheets/ribbons.min.css">
-    <link rel="stylesheet" href="/resources/stylesheets/material.red-blue.min.css">
-    <link rel="stylesheet" href="/resources/stylesheets/sainternet.min.css">
 
-    <link rel="dns-prefetch" href="discord.gg">
-    <link rel="dns-prefetch" href="github.com">
-    <link rel="dns-prefetch" href="www.reddit.com">
-    <link rel="prefetch" href="/resources/images/wurmple-shiny.webp" as="image">
     <link rel="prefetch" href="/newsandupdates.html" as="document">
     <link rel="prerender" href="/newsandupdates.html">
     <link rel="prefetch" href="/filtereddns.html" as="document">
@@ -50,6 +48,15 @@
     <link rel="prerender" href="/pokedexoverdns.html">
     <link rel="prefetch" href="/projects.html" as="document">
     <link rel="prerender" href="/projects.html">
+
+    <link rel="dns-prefetch" href="discord.gg">
+    <link rel="dns-prefetch" href="github.com">
+    <link rel="dns-prefetch" href="www.reddit.com">
+    <style>
+      body {
+        font-family: 'Roboto', sans-serif;
+      }
+    </style>
   </head>
   <body>
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
