--- a/newsandupdates.html
+++ b/newsandupdates.html
@@ -101,11 +101,12 @@
               In the past year <code>dns.sainternet.xyz</code> has:
             </p>
             <ul>
-              <li>Answered half a billion DNS queries</li>
+              <li>Answered over half a billion (500,000,000) DNS queries</li>
+              <li>For over 140,000 unique domains</li>
               <li>Using an encrypted standard 42% of the time</li>
-              <li>To over 5,000 unique client IPs</li>
+              <li>From over 5,000 unique client IPs</li>
               <li>Most of whom (~85%) preferred IPv4</li>
-              <li>38% of which resulted in a block (<code>NXDOMAIN</code>)</li>
+              <li>Where ~38% resulted in a block (<code>NXDOMAIN</code>)</li>
               <li>While it maintained a ~95% uptime status</li>
             </ul>
             <p>
