saint-lascivious.github.io: attempt to reduce LCP time
the good 'ol stackoverflow community auti...audit meat machine

 - preload hero/mascot image
 - also, add preloads for google fonts, material icons

Changes to be committed:
 - modified:   index.html

--- a/index.html
+++ b/index.html
@@ -32,12 +32,16 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="preload" as="style" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <link rel="stylesheet" href="/resources/fontawesome/css/fontawesome.min.css">
     <link rel="stylesheet" href="/resources/fontawesome/css/brands.min.css">
     <link rel="stylesheet" href="/resources/fontawesome/css/solid.min.css">
+
+    <link rel="preload" fetchpriority="high" as="image" href="/resources/images/wurmple.webp" type="image/webp">
 
     <link rel="prefetch" href="/newsandupdates.html" as="document">
     <link rel="prerender" href="/newsandupdates.html">
@@ -98,8 +102,8 @@
           <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
             <h3><span class="embiggen">Welcome</span></h3>
             <picture>
-              <source srcset="resources/images/wurmple-shiny.webp" type="image/webp" media="(prefers-color-scheme: dark)">
-              <img src="resources/images/wurmple.webp" alt="Image supplied not illustrative, the author is not a Pokémon.">
+              <source srcset="/resources/images/wurmple-shiny.webp" type="image/webp" media="(prefers-color-scheme: dark)">
+              <img src="/resources/images/wurmple.webp" alt="Image supplied not illustrative, the author is not a Pokémon.">
             </picture>
             <p align="center">
               Welcome to Sainternet.
