saint-lascivious.github.io: now it'l bitch about too many preloads
...or something else entirely, the Lighthouse profiler is "fun".

Changes to be committed:
 - modified:   index.html

--- a/index.html
+++ b/index.html
@@ -25,9 +25,13 @@
     <link rel="canonical" href="https://sainternet.xyz/index.html">
     <meta name="keywords" content="dns, DNS, dns.sainternet.xyz, doh, DoH, dohttps, DoHTTPS, doh/3, DoH/3, dohttp/3, DoHTTP/3, dot, DoT, dotls, DoTLS, doq, DoQ, doquic, DoQUIC, 'filtered dns', 'filtered DNS', 'Hayden Pearce', pokedex, Pokedex, pokédex, Pokédex, saint, saint-lascivious, sainternet.xyz">
 
+    <link rel="preload" as="style" href="/resources/stylesheets/material.red-blue.min.css">
     <link rel="stylesheet" href="/resources/stylesheets/material.red-blue.min.css">
+    <link rel="preload" as="style" href="/resources/stylesheets/sainternet.min.css">
     <link rel="stylesheet" href="/resources/stylesheets/sainternet.min.css">
+    <link rel="preload" as="style" href="/resources/stylesheets/ribbons.min.css">
     <link rel="stylesheet" href="/resources/stylesheets/ribbons.min.css">
+    <link rel="preload" as="style" href="/resources/stylesheets/img.min.css">
     <link rel="stylesheet" href="/resources/stylesheets/img.min.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -37,17 +41,20 @@
     <link rel="preload" as="style" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
+    <link rel="preload" as="style" href="/resources/fontawesome/css/fontawesome.min.css">
     <link rel="stylesheet" href="/resources/fontawesome/css/fontawesome.min.css">
+    <link rel="preload" as="style" href="/resources/fontawesome/css/brands.min.css">
     <link rel="stylesheet" href="/resources/fontawesome/css/brands.min.css">
-    <link rel="stylesheet" href="/resources/fontawesome/css/solid.min.css">
+    <link rel="preload" as="style" href="/resources/fontawesome/css/brands.min.css">
+    <link rel="stylesheet" href="/resources/fontawesome/css/brands.min.css">
 
-    <link rel="preload" fetchpriority="high" as="image" href="/resources/images/wurmple.webp" type="image/webp">
+    <link rel="preload" as="image" href="/resources/images/wurmple.webp" type="image/webp">
+    <link rel="preload" as="image" href="/resources/images/wurmple-shiny.webp" type="image/webp">
 
     <link rel="prefetch" href="/newsandupdates.html" as="document">
     <link rel="prerender" href="/newsandupdates.html">
     <link rel="prefetch" href="/filtereddns.html" as="document">
     <link rel="prerender" href="/filtereddns.html">
-    <link rel="prefetch" href="/resources/images/terminal.webp" as="image">
     <link rel="prefetch" href="/pokedexoverdns.html" as="document">
     <link rel="prerender" href="/pokedexoverdns.html">
     <link rel="prefetch" href="/projects.html" as="document">
@@ -56,11 +63,6 @@
     <link rel="dns-prefetch" href="discord.gg">
     <link rel="dns-prefetch" href="github.com">
     <link rel="dns-prefetch" href="www.reddit.com">
-    <style>
-      body {
-        font-family: 'Roboto', sans-serif;
-      }
-    </style>
   </head>
   <body>
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
