--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <h3><span class="embiggen">Welcome</span></h3>
             <picture>
               <source srcset="/resources/images/wurmple-shiny.webp" type="image/webp" media="(prefers-color-scheme: dark)">
-              <img src="/resources/images/wurmple.webp" alt="Image supplied not illustrative, the author is not a Pokémon.">
+              <img src="/resources/images/wurmple.webp" width="480" height="480" alt="Image supplied not illustrative, the author is not a Pokémon.">
             </picture>
             <p align="center">
               Welcome to Sainternet.
