saint-lascivious.github.io: deploy what we've learned
Changes to be committed:
 - modified:   265.html
 - modified:   404.html
 - modified:   connecttosainternet.html
 - modified:   filtereddns.html
 - modified:   frequentlyaskedquestions.html
 - modified:   index.html
 - modified:   newsandupdates.html
 - modified:   pokedexoverdns.html
 - modified:   portsandprotocols.html
 - modified:   projects.html
 - modified:   reportaproblem.html
 - modified:   technologies.html
 - modified:   testsainternet.html

--- a/404.html
+++ b/404.html
@@ -25,21 +25,45 @@
     <link rel="canonical" href="https://sainternet.xyz/404.html">
     <meta name="keywords" content="dns, DNS, dns.sainternet.xyz, doh, DoH, dohttps, DoHTTPS, doh/3, DoH/3, dohttp/3, DoHTTP/3, dot, DoT, dotls, DoTLS, doq, DoQ, doquic, DoQUIC, 'filtered dns', 'filtered DNS', 'Hayden Pearce', luxio, Luxio, pokedex, Pokedex, pokédex, Pokédex, saint, saint-lascivious, sainternet.xyz">
 
+    <link rel="preload" as="style" href="/resources/stylesheets/material.light_blue-red.min.css">
+    <link rel="stylesheet" href="/resources/stylesheets/material.light_blue-red.min.css">
+    <link rel="preload" as="style" href="/resources/stylesheets/sainternet.min.css">
+    <link rel="stylesheet" href="/resources/stylesheets/sainternet.min.css">
+    <link rel="preload" as="style" href="/resources/stylesheets/ribbons.min.css">
+    <link rel="stylesheet" href="/resources/stylesheets/ribbons.min.css">
+    <link rel="preload" as="style" href="/resources/stylesheets/img.min.css">
+    <link rel="stylesheet" href="/resources/stylesheets/img.min.css">
+    <link rel="preload" as="style" href="/resources/stylesheets/pre.min.css">
+    <link rel="stylesheet" href="/resources/stylesheets/pre.min.css">
+    <link rel="preload" as="style" href="/resources/stylesheets/button_home.min.css">
+    <link rel="stylesheet" href="/resources/stylesheets/button_home.min.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="preconnect" href="https://cdnjs.cloudflare.com">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-    <link rel="stylesheet" href="/resources/stylesheets/material.light_blue-red.min.css">
-    <link rel="stylesheet" href="/resources/stylesheets/button_home.min.css">
-    <link rel="stylesheet" href="/resources/stylesheets/img.min.css">
-    <link rel="stylesheet" href="/resources/stylesheets/pre.min.css">
-    <link rel="stylesheet" href="/resources/stylesheets/ribbons.min.css">
-    <link rel="stylesheet" href="/resources/stylesheets/sainternet.min.css">
+    <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="preload" as="style" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <link rel="preload" as="style" href="/resources/fontawesome/css/fontawesome.min.css">
+    <link rel="stylesheet" href="/resources/fontawesome/css/fontawesome.min.css">
+    <link rel="preload" as="style" href="/resources/fontawesome/css/solid.min.css">
+    <link rel="stylesheet" href="/resources/fontawesome/css/solid.min.css">
+    <link rel="preload" as="style" href="/resources/fontawesome/css/brands.min.css">
+    <link rel="stylesheet" href="/resources/fontawesome/css/brands.min.css">
+
+    <link rel="preload" as="image" href="/resources/images/luxio.webp" type="image/webp">
+    <link rel="preload" as="image" href="/resources/images/luxio-shiny.webp" type="image/webp">
+
+    <script type="text/javascript" src="/resources/javascript/material.min.js" async></script>
+    <script type="text/javascript" src="/resources/javascript/sainternet.min.js" async></script>
 
     <link rel="prefetch" href="/265.html" as="document">
     <link rel="prerender" href="/265.html">
+
+    <link rel="dns-prefetch" href="discord.gg">
+    <link rel="dns-prefetch" href="github.com">
+    <link rel="dns-prefetch" href="www.reddit.com">
   </head>
   <body>
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
@@ -86,8 +110,8 @@
           <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
             <h3><span class="embiggen">Pokémon #404<br>Luxio<br>(Spark Pokémon)</span></h3>
             <picture>
-              <source srcset="resources/images/luxio-shiny.webp" type="image/webp" media="(prefers-color-scheme: dark)">
-              <img src="resources/images/luxio.webp" alt="Pokémon #404, Luxio (Spark Pokémon): Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.">
+              <source srcset="/resources/images/luxio-shiny.webp" type="image/webp" media="(prefers-color-scheme: dark)">
+              <img src="/resources/images/luxio.webp" width="480" height="480" alt="Pokémon #404, Luxio (Spark Pokémon): Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.">
             </picture>
             <p align="center">
               A wild <b>Luxio</b> appeared!
@@ -178,7 +202,5 @@ nslookup -type=txt 404.pokedex dns.sainternet.xyz
       </div>
     </footer>
     <a href="https://sainternet.xyz" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--16dp"><icon class="material-icons">home</icon></a>
-    <script type="text/javascript" src="/resources/javascript/material.min.js" async></script>
-    <script type="text/javascript" src="/resources/javascript/sainternet.min.js" async></script>
   </body>
 </html>
