--- a/newsandupdates.html
+++ b/newsandupdates.html
@@ -25,23 +25,43 @@
     <link rel="canonical" href="https://sainternet.xyz/newsandupdates.html">
     <meta name="keywords" content="dns, DNS, dns.sainternet.xyz, doh, DoH, dohttps, DoHTTPS, doh/3, DoH/3, dohttp/3, DoHTTP/3, dot, DoT, dotls, DoTLS, doq, DoQ, doquic, DoQUIC, 'filtered dns', 'filtered DNS', 'Hayden Pearce', luxio, Luxio, pokedex, Pokedex, pokédex, Pokédex, saint, saint-lascivious, sainternet.xyz">
 
+    <link rel="preload" as="style" href="/resources/stylesheets/material.deep_orange-red.min.css">
+    <link rel="stylesheet" href="/resources/stylesheets/material.deep_orange-red.min.css">
+    <link rel="preload" as="style" href="/resources/stylesheets/sainternet.min.css">
+    <link rel="stylesheet" href="/resources/stylesheets/sainternet.min.css">
+    <link rel="preload" as="style" href="/resources/stylesheets/ribbons.min.css">
+    <link rel="stylesheet" href="/resources/stylesheets/ribbons.min.css">
+    <link rel="preload" as="style" href="/resources/stylesheets/datetime.min.css">
+    <link rel="stylesheet" href="/resources/stylesheets/datetime.min.css">
+    <link rel="preload" as="style" href="/resources/stylesheets/button_home.min.css">
+    <link rel="stylesheet" href="/resources/stylesheets/button_home.min.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="preconnect" href="https://cdnjs.cloudflare.com">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-    <link rel="stylesheet" href="/resources/stylesheets/material.deep_orange-red.min.css">
-    <link rel="stylesheet" href="/resources/stylesheets/button_home.min.css">
-    <link rel="stylesheet" href="/resources/stylesheets/datetime.min.css">
-    <link rel="stylesheet" href="/resources/stylesheets/ribbons.min.css">
-    <link rel="stylesheet" href="/resources/stylesheets/sainternet.min.css">
+    <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="preload" as="style" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    <link rel="dns-prefetch" href="pi-hole.net">
+    <link rel="preload" as="style" href="/resources/fontawesome/css/fontawesome.min.css">
+    <link rel="stylesheet" href="/resources/fontawesome/css/fontawesome.min.css">
+    <link rel="preload" as="style" href="/resources/fontawesome/css/solid.min.css">
+    <link rel="stylesheet" href="/resources/fontawesome/css/solid.min.css">
+    <link rel="preload" as="style" href="/resources/fontawesome/css/brands.min.css">
+    <link rel="stylesheet" href="/resources/fontawesome/css/brands.min.css">
+
+    <script type="text/javascript" src="/resources/javascript/material.min.js" async></script>
+    <script type="text/javascript" src="/resources/javascript/sainternet.min.js" async></script>
+
     <link rel="prefetch" href="/projects.html" as="document">
     <link rel="prerender" href="/projects.html">
     <link rel="prefetch" href="/reportaproblem.html" as="document">
     <link rel="prerender" href="/reportaproblem.html">
+
+    <link rel="dns-prefetch" href="pi-hole.net">
+    <link rel="dns-prefetch" href="discord.gg">
+    <link rel="dns-prefetch" href="github.com">
+    <link rel="dns-prefetch" href="www.reddit.com">
   </head>
   <body>
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
@@ -243,7 +263,5 @@
       </div>
     </footer>
     <a href="https://sainternet.xyz" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--16dp"><icon class="material-icons">home</icon></a>
-    <script type="text/javascript" src="/resources/javascript/material.min.js" async></script>
-    <script type="text/javascript" src="/resources/javascript/sainternet.min.js" async></script>
   </body>
 </html>
