--- a/pokedexoverdns.html
+++ b/pokedexoverdns.html
@@ -25,24 +25,45 @@
     <link rel="canonical" href="https://sainternet.xyz/pokedexoverdns.html">
     <meta name="keywords" content="dns, DNS, dns.sainternet.xyz, doh, DoH, dohttps, DoHTTPS, doh/3, DoH/3, dohttp/3, DoHTTP/3, dot, DoT, dotls, DoTLS, doq, DoQ, doquic, DoQUIC, 'filtered dns', 'filtered DNS', 'Hayden Pearce', pokedex, Pokedex, pokédex, Pokédex, saint, saint-lascivious, sainternet.xyz">
 
+    <link rel="preload" as="style" href="/resources/stylesheets/material.deep_purple-red.min.css">
+    <link rel="stylesheet" href="/resources/stylesheets/material.deep_purple-red.min.css">
+    <link rel="preload" as="style" href="/resources/stylesheets/sainternet.min.css">
+    <link rel="stylesheet" href="/resources/stylesheets/sainternet.min.css">
+    <link rel="preload" as="style" href="/resources/stylesheets/ribbons.min.css">
+    <link rel="stylesheet" href="/resources/stylesheets/ribbons.min.css">
+    <link rel="preload" as="style" href="/resources/stylesheets/img.min.css">
+    <link rel="stylesheet" href="/resources/stylesheets/img.min.css">
+    <link rel="preload" as="style" href="/resources/stylesheets/pre.min.css">
+    <link rel="stylesheet" href="/resources/stylesheets/pre.min.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="preconnect" href="https://cdnjs.cloudflare.com">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-    <link rel="stylesheet" href="/resources/stylesheets/material.deep_purple-red.min.css">
-    <link rel="stylesheet" href="/resources/stylesheets/button_home.min.css">
-    <link rel="stylesheet" href="/resources/stylesheets/img.min.css">
-    <link rel="stylesheet" href="/resources/stylesheets/pre.min.css">
-    <link rel="stylesheet" href="/resources/stylesheets/ribbons.min.css">
-    <link rel="stylesheet" href="/resources/stylesheets/sainternet.min.css">
+    <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="preload" as="style" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <link rel="preload" as="style" href="/resources/fontawesome/css/fontawesome.min.css">
+    <link rel="stylesheet" href="/resources/fontawesome/css/fontawesome.min.css">
+    <link rel="preload" as="style" href="/resources/fontawesome/css/solid.min.css">
+    <link rel="stylesheet" href="/resources/fontawesome/css/solid.min.css">
+    <link rel="preload" as="style" href="/resources/fontawesome/css/brands.min.css">
+    <link rel="stylesheet" href="/resources/fontawesome/css/brands.min.css">
+
+    <link rel="preload" as="image" href="/resources/images/terminal.webp" type="image/webp">
+
+    <script type="text/javascript" src="/resources/javascript/material.min.js" async></script>
+    <script type="text/javascript" src="/resources/javascript/sainternet.min.js" async></script>
+
+    <link rel="prefetch" href="/265.html" as="document">
+    <link rel="prerender" href="/265.html">
 
     <link rel="dns-prefetch" href="bulbapedia.bulbgarden.net">
     <link rel="dns-prefetch" href="linux.die.net">
     <link rel="dns-prefetch" href="www.nlnetlabs.nl">
-    <link rel="prefetch" href="/265.html" as="document">
-    <link rel="prerender" href="/265.html">
+    <link rel="dns-prefetch" href="discord.gg">
+    <link rel="dns-prefetch" href="github.com">
+    <link rel="dns-prefetch" href="www.reddit.com">
   </head>
   <body>
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
@@ -87,7 +108,7 @@
               Sainternet is proud to present to you the <b><i>world's first</i></b> (…and only?) DNS driven <a href="https://en.wikipedia.org/wiki/TXT_record">TXT record</a> based National Pokédex over DNS!
             </p>
             <picture>
-              <a href="/265.html#pokemon265" style="cursor:default"><img src="resources/images/terminal.webp" alt="Example Pokédex-over-DNS query using nslookup and dig utilities from the command line: nslookup -type=txt wurmple.pokedex dns.sainternet.xyz, dig +short txt wurmple.pokedex @dns.sainternet.xyz"></a>
+              <a href="/265.html#pokemon265" style="cursor:default"><img src="/resources/images/terminal.webp" width="820" height="480" alt="Example Pokédex-over-DNS query using nslookup and dig utilities from the command line: nslookup -type=txt wurmple.pokedex dns.sainternet.xyz, dig +short txt wurmple.pokedex @dns.sainternet.xyz"></a>
             </picture>
             <p>
               This fun little (<i>ab</i>)use of DNS allows one to query a Pokémon species name (currently supported: English) in order to receive its <a href="https://bulbapedia.bulbagarden.net/wiki/List_of_Pok%C3%A9mon_by_National_Pok%C3%A9dex_number">National Pokédex Number</a> (NPN), or query an NPN (zero padding optional) in order to receive the Pokémon species name (currently supported: English, Japanese <a href="https://en.wikipedia.org/wiki/Romanization_of_Japanese">Rōmaji</a>).
@@ -172,7 +193,5 @@ nslookup -type=txt 265.pokedex dns.sainternet.xyz
       </div>
     </footer>
     <a href="https://sainternet.xyz" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--16dp"><icon class="material-icons">home</icon></a>
-    <script type="text/javascript" src="/resources/javascript/material.min.js" async></script>
-    <script type="text/javascript" src="/resources/javascript/sainternet.min.js" async></script>
   </body>
 </html>
